--- a/projet2.css
+++ b/projet2.css
@@ -1,33 +1,60 @@
 #image1 {
     width: 100%;
-    height: 0%;
+    height: 50%;
     position: relative;
 }
 
-.class2 {
+.menu {
     background-color: #EEB41F;
     margin-right: 10px;
     position: absolute;
-    bottom: 800px;
-    right: 20px;
+
+    top: 0px;
+    right: 0px;
 }
    
-.class3 {
+.elementmenu {
     display: inline;
     font-size: 25px;
     font-weight: 700;
-}   
-
-.class5 {
-    display: inline;
-    position: absolute;
-    bottom: 50%;
 }
 
-.class4 {
+.gigapizzeria {
+    background-color: #EEB41F;
+    width: 100%;
+    max-height: 300px;
+}
+
+#titre {
+    
+    position: absolute;
+    bottom: 50%;
+    right: 50%;
+}
+
+.elementgigapizzeria {
+    display: inline-block;
+    font-size: 150%;
+}
+
+#ensavoirplus {
+    position: absolute;
+    bottom: 50%;
+    left: 70%;
+}
+
+.desnouveautés {
     display: inline-block;
 }
 
-#bouton1 {
+#image2 {
     float: right;
+}
+
+#nouveautés {
+    max-height: 200px;
+}
+
+.elementfooter {
+    display: inline-block;
 }
